--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
 <h1>smaller heading i think</h1>
 
+
+<a href="https://www.minevn.net">check out minevn here</a>
 <p>test123</p>
 <p>not a paragraph</p>
 
