--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 
 <a href="https://www.minevn.net">check out minevn here</a>
+<br>
 <img src="https://i.ibb.co/MStxDPx/935915-10100849926252771-590650591-n-transformed.jpg"
-     alt="its-a me, marku zuckaburggu" >
+     alt="its-a me, marku zuckaburggu"  width="200" height="200">
 <p>test123</p>
 <p>not a paragraph</p>
 
