--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Thang ba may gay</title>
+    <link rel="icon" type="image/x-icon" href="img/kuroo.png">
 </head>
 
 <body>
 <h1>smaller heading i think</h1>
 
 
-<a href="https://www.minevn.net">check out minevn here</a>
+<a href="https://www.minevn.net" title="very good server">check out minevn here</a>
 <br>
 <img src="https://i.ibb.co/MStxDPx/935915-10100849926252771-590650591-n-transformed.jpg"
-     alt="its-a me, marku zuckaburggu"  width="200" height="200">
+     alt="its-a me, marku zuckaburggu"  width="200" height="200" title="its-a me, marku zuckaburggu">
 <p>test123</p>
 <p>not a paragraph</p>
+<p style="color:blue"> a blue string</p>
 
 </body>
 </html>
