--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-<h1>smaller heading i think</h1>
+<h1>big heading</h1>
+<h2 style="font-size:69px"> smaller heading i think</h2>
 
 
 <a href="https://www.minevn.net" title="very good server">check out minevn here</a>
