--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <h1>big heading</h1>
 <h2 style="font-size:69px"> smaller heading i think</h2>
+<h3>oops probably not</h3>
 
 
 <a href="https://www.minevn.net" title="very good server">check out minevn here</a>
@@ -18,6 +19,13 @@
 <p>test123</p>
 <p>not a paragraph</p>
 <p style="color:blue"> a blue string</p>
+
+<h4>look a heading</h4>
+<p>it has texts in it</p>
+<hr>
+<h4>another heading but with hr</h4>
+<p>no text here though, right</p>
+<hr>
 
 </body>
 </html>
