--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
 <h4>another heading but with hr</h4>
 <p>no text here though, right</p>
 <hr>
+<p>lol that thing creates a damn break line, my english sucks</p>
 
+<pre>
+    Haiku time.
+
+    I suck.
+    You suck.
+    They suck.
+    We all suck.
+</pre>
 </body>
 </html>
