--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>big heading</h1>
 <h2 style="font-size:69px"> smaller heading i think</h2>
 <h3>oops probably not</h3>
-
+<hr>
 
 <a href="https://www.minevn.net" title="very good server">check out minevn here</a>
 <br>
@@ -19,14 +19,19 @@
 <p>test123</p>
 <p>not a paragraph</p>
 <p style="color:blue"> a blue string</p>
+<hr>
 
 <h4>look a heading</h4>
 <p>it has texts in it</p>
 <hr>
+
 <h4>another heading but with hr</h4>
 <p>no text here though, right</p>
 <hr>
+
 <p>lol that thing creates a damn break line, my english sucks</p>
+<p>abusing hr yay</p>
+<hr>
 
 <pre>
     Haiku time.
