--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-<h1>big heading</h1>
+<h1 style="text-align:center">big heading in the center</h1>
 <h2 style="font-size:69px"> smaller heading i think</h2>
-<h3>oops probably not</h3>
+<h3 style="text-align:end">oops probably not</h3>
 <hr>
 
 <a href="https://www.minevn.net" title="very good server">check out minevn here</a>
@@ -41,5 +41,25 @@
     They suck.
     We all suck.
 </pre>
+<hr>
+
+<h1 style="background-color:dimgray">heading with a dim gray background</h1>
+<p style="background-color:#36393e">not really a paragraph but it has a dimmer gray background</p>
+<p>both are unreadable yay</p>
+<hr>
+
+<h2 style="color:pink">now a heading with pink texts</h2>
+<p style="color:#cdb277">still unreadable</p>
+<hr>
+
+<b>big bold text (dude for real)</b> <br>
+<strong>yes for real dude</strong> <br>
+<i>both of you look identical though</i> <br>
+<em>the italian is right guys</em> <br>
+<mark>you two are identical too</mark> <br>
+<small>ew yellow texts</small> <br>
+<p>haha <del>big</del> <ins>very</ins> small text</p> <br>
+<p>its-a me <sub>subtexts</sub> </p> <br>
+<p>bro <sup>shut up</sup> </p> <br>
 </body>
 </html>
