--- a/index.html
+++ b/index.html
@@ -61,5 +61,13 @@
 <p>haha <del>big</del> <ins>very</ins> small text</p> <br>
 <p>its-a me <sub>subtexts</sub> </p> <br>
 <p>bro <sup>shut up</sup> </p> <br>
+<hr>
+
+<blockquote cite="https://www.minevn.net/">not a quote but in a block i think<br></blockquote>
+<p><q>anyway that doesnt work</q></p>
+<p><abbr title="minevn">mvn</abbr> is a very good server though</p>
+
+
+
 </body>
 </html>
