--- a/index.html
+++ b/index.html
@@ -64,8 +64,16 @@
 <hr>
 
 <blockquote cite="https://www.minevn.net/">not a quote but in a block i think<br></blockquote>
-<p><q>anyway that doesnt work</q></p>
+<p><q>anyway that kinda doesnt work</q></p>
 <p><abbr title="minevn">mvn</abbr> is a very good server though</p>
+<hr>
+
+<address> Written by Kuro-kun at Gallavoir Inc.<br>
+    Visit him at <a href="https://www.minevn.net" title="https://www.minevn.net">MineVN</a> </address>
+<p><bdo dir="rtl"> do the text the (almost) arabic way</bdo></p>
+<hr>
+
+<!-- comment or something idk -->
 
 
 
