--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <h1 style="text-align:center">big heading in the center</h1>
 <h2 style="font-size:69px"> smaller heading i think</h2>
 <h3 style="text-align:end">oops probably not</h3>
+<h4> <a href="https://github.com/epikgallavoir/epikgallavoir.github.io/">go to homepage</a> </h4>
 <hr>
 
 <a href="https://www.minevn.net" title="very good server">check out minevn here</a>
 <br>
 <img src="https://i.ibb.co/MStxDPx/935915-10100849926252771-590650591-n-transformed.jpg"
-     alt="its-a me, marku zuckaburggu"  width="200" height="200" title="its-a me, marku zuckaburggu">
+     alt="its-a me, marku zuckaburggu"  width="200" height="200" title="its-a me, marku zuckaburggu, in a 200x200 window">
 <p>test123</p>
 <p>not a paragraph</p>
 <p style="color:blue"> a blue string</p>
@@ -75,7 +76,8 @@
 
 <!-- comment or something idk -->
 
-
+<img src="https://github.com/epikgallavoir/epikgallavoir.github.io/blob/main/img/nahh.png"
+    alt="ignore this image" >
 
 </body>
 </html>
