--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 
 <!-- comment or something idk -->
 
-<img src="https://github.com/epikgallavoir/epikgallavoir.github.io/blob/main/img/nahh.png"
-    alt="ignore this image" >
+<img src=img/nahh.png" title="ignore this image">
 
 </body>
 </html>
