--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <!-- comment or something idk -->
 
-<img src=img/nahh.png" title="ignore this image">
+<img src="img/nahh.png" title="ignore this image">
 
 </body>
 </html>
