--- a/hvn.html
+++ b/hvn.html
@@ -9,6 +9,6 @@
         <title>Page Redirection</title>
     </head>
     <body>
-        Copy link này <a href='https://hentaivn.tv/user-269104'></a> nếu bạn không được tự động redirect.
+        Copy <a href='https://hentaivn.tv/user-269104'>link này</a> (https://hentaivn.tv/user-269104) nếu bạn không được tự động redirect.
     </body>
 </html>
