--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1 style="text-align:center">big heading in the center</h1>
 <h2 style="font-size:69px"> smaller heading i think</h2>
 <h3 style="text-align:end">oops probably not</h3>
-<h4> <a href="https://github.com/epikgallavoir/epikgallavoir.github.io/">go to homepage</a> </h4>
+<h4> <a href="https://github.com/epikgallavoir/epikgallavoir.github.io/">go to homepage</a> or <a href="https://epikgallavoir.github.io/hvn.html">click here for pron</a></h4>
 <hr>
 
 <a href="https://www.minevn.net" title="very good server">check out minevn here</a>
