--- a/hvn.html
+++ b/hvn.html
@@ -6,7 +6,8 @@
         <script type="text/javascript">
             window.location.href = "https://hentaivn.tv/user-269104"
         </script>
-        <title>Page Redirection</title>
+        <title>Sech</title>
+    <link rel="icon" type="image/x-icon" href="img/kuroo.png">
     </head>
     <body>
         Copy <a href='https://hentaivn.tv/user-269104'>link này</a> (https://hentaivn.tv/user-269104) nếu bạn không được tự động redirect.
