--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h4> <a href="https://github.com/epikgallavoir/epikgallavoir.github.io/">go to homepage</a> or <a href="https://epikgallavoir.github.io/hvn.html">click here for pron</a> or <a href="https://epikgallavoir.github.io/35099.html">click here for direct pron</a></h4>
 <hr>
 
-<a href="https://www.minevn.net" title="very good server">check out minevn here</a>
+<a href="https://www.minevn.net" title="very good server">check out minevn here</a> or <a href="https://raw.githubusercontent.com/epikgallavoir/epikgallavoir.github.io/main/newthemeconfig.css">download a discord theme</a>
 <br>
 <img src="https://i.ibb.co/MStxDPx/935915-10100849926252771-590650591-n-transformed.jpg"
      alt="its-a me, marku zuckaburggu"  width="200" height="200" title="its-a me, marku zuckaburggu, in a 200x200 window">
