--- a/35099.html
+++ b/35099.html
@@ -10,6 +10,6 @@
     <link rel="icon" type="image/x-icon" href="img/kuroo.png">
     </head>
     <body>
-        Copy <a href='https://hentaivn.tv/35099-doc-truyen-id.html'>link này</a> (https://hentaivn.tv/35099-doc-truyen-id.html) nếu bạn không được tự động redirect.
+        Copy <a href='https://hentaivn.tv/35099-doc-truyen-id.html'>link này</a> (https://hentaivn.tv/35099-doc-truyen-id.html) nếu bạn không được tự động chuyển hướng.
     </body>
 </html>
