Nuked the whole thing to do it again

--- a/rdr/hvn.html
+++ b/rdr/hvn.html
@@ -7,7 +7,7 @@
             window.location.href = "https://hentaivn.tv/user-269104"
         </script>
         <title>Sech</title>
-    <link rel="icon" type="image/x-icon" href="img/kuroo.png">
+    <link rel="icon" type="image/x-icon" href="../img/kuroo.png">
     </head>
     <body>
         Copy <a href='https://hentaivn.tv/user-269104'>link này</a> (https://hentaivn.tv/user-269104) nếu bạn không được tự động chuyển hướng.
