--- a/rdr/35099.html
+++ b/rdr/35099.html
@@ -7,7 +7,7 @@
             window.location.href = "https://hentaivn.tv/35099-doc-truyen-id.html"
         </script>
         <title>Sech</title>
-    <link rel="icon" type="image/x-icon" href="img/kuroo.png">
+    <link rel="icon" type="image/x-icon" href="../img/kuroo.png">
     </head>
     <body>
         Copy <a href='https://hentaivn.tv/35099-doc-truyen-id.html'>link này</a> (https://hentaivn.tv/35099-doc-truyen-id.html) nếu bạn không được tự động chuyển hướng.
