--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- This is a comment.-->
 
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8"/>
         <title>Hallucination</title>
