--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Hallucination</title>
+        <meta name="author" content="Kamaon">
+        <meta name="description"
+              content="A very simple webpage, which is also a personal space for ones that are having a breakdown">
+
     </head>
 
     <body>
