--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Hallucination</title>
+        <link rel="icon" href="img/kuroo.png" type="image/x-icon" />
         <meta name="author" content="Kamaon">
         <meta name="description"
-              content="A very simple webpage, which is also a personal space for ones that are having a breakdown">
+              content="A very simple webpage, which is also a personal space for the one who is having a breakdown">
+
+        <!--open graph protocol or something idk I read the mdn docs
+            used in facebook?-->
+        <meta property="og:image" content="img/kuroo.img">
+        <meta property="og:description"
+              content="A very simple webpage, which is also a personal space for the one who is having a breakdown">
 
     </head>
 
