--- a/index.html
+++ b/index.html
@@ -6,29 +6,35 @@
         <meta charset="UTF-8"/>
         <title>Hallucination</title>
         <link rel="icon" href="img/kuroo.png" type="image/x-icon" />
+        <link rel="stylesheet" href="css/main.css" />
+
         <meta name="author" content="Kamaon">
         <meta name="description"
               content="A very simple webpage, which is also a personal space for the one who is having a breakdown">
 
-        <!--open graph protocol or something idk I read the mdn docs
-            used in facebook?-->
+        <!-- open graph protocol or something idk I read the mdn docs
+            facebook and twitter(?) thingamajig -->
         <meta property="og:image" content="img/kuroo.img">
         <meta property="og:description"
               content="A very simple webpage, which is also a personal space for the one who is having a breakdown">
 
     </head>
 
+<!-- intermission...
+    mostly so I can see better which is which -->
+
     <body>
         <h1>Hallucination</h1>
-        <p>Currently, a place for <strong>Kamaon</strong> to express himself to the outer world.</p>
+        <p>Currently, a playground for <strong>Kamaon</strong> to express himself to the outer world.</p>
         <p>Go <a href="https://github.com/drkamaon" title="This leads to his github profile.">here</a>
             and check him out.</p>
         <br>
 
         <p>Questionably enough, he translates doujins to Vietnamese.</p>
-        <p>There isn't much to say aside from that, so you can click <a href="rdr/hvn.html" title="210vn">here</a>
+        <p>There isn't much to say aside from that, so you can click <a href="rdr/hvn.html" title="It's pron.">here</a>
             to see his work.</p>
         <img src="img/nahh.png" width="300" height="300"
               alt="please ignore this image" title="pron in a 300x300 window">
+
     </body>
 </html>
