--- a/playground/html.html
+++ b/playground/html.html
@@ -8,18 +8,44 @@
     <link rel="icon" href="../img/kuroo.png" type="image/x-icon" />
     <link rel="stylesheet" href="../css/main.css" />
 <body>
+<span>Click <a href="../index.html">here</a> to go back to index</span>
+<hr>
 <h2>A subheading, so take it like the "why" part of hallucination.</h2>
 <h3>Sub-subheading, so "how"...</h3>
 <h4>So on and so on, then what?</h4>
 <h5>You get the drill.</h5>
 <h6>And so do I. Maybe, I'm not sure.</h6>
 
-<span>No semantics here though, this is &lt;span&gt;. Inlines only. Also doesn't break another line.</span>
-<br>
+<span>No semantics here though, this is &lt;span&gt;. Inlines only. Also doesn't break another line. Does it wrap words? Probably. It doesn't mean anything... how is that?</span>
+<p>Mà semantics là cái gì cơ? </p>
+<p>Ngữ nghĩa học. Đách biết là gì luôn</p>
 <br>
 
 <input disabled class="textbox" type="text" placeholder="A text box. Currently doesn't work like it should though."
        title="What more can you ask for?">
-</body>
+<br>
 
+<ul>Here's a list.
+    <li>This is unordered.</li>
+    <li>So as this one.</li>
+    <li>How unordered? Who knows.</li>
+    <li>oh it uses bullet points</li>
+
+</ul>
+
+<ol>Here's another list.
+    <li>This one is ordered though.</li>
+    <li>How ordered?</li>
+    <li>You tell me.</li>
+    <li>while this uses numbers</li>
+</ol>
+<br>
+
+<p>I'm lazy so please click <a href="rdr/hvn.html" title="It's pron.">here.</a> It's a link.</p>
+<hr>
+
+<p>Oh right. &lt;hr&gt;. It create a line. Somehow.</p>
+
+
+</body>
 </html>
