--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
     <body>
         <h1>Hallucination</h1>
         <p>Currently, a playground for <strong>Kamaon</strong> to express himself to the outer world.</p>
-        <p>Go <a href="https://github.com/drkamaon" title="This leads to his github profile.">here</a>
+        <p>Go <a href="https://github.com/drkamaon" title="GitHub profile">here</a>
             and check him out.</p>
         <br>
 
         <p>Questionably enough, he translates doujins to Vietnamese.</p>
         <p>There isn't much to say aside from that, so you can click <a href="rdr/hvn.html" title="It's pron.">here</a>
             to see his work.</p>
-        <img src="img/nahh.png" width="300" height="300"
-              alt="please ignore this image" title="pron in a 300x300 window">
+        <img src="img/nahh.png" width="300" height="300" title="please ignore this image">
 
     </body>
 </html>
