--- a/rdr/hvn.html
+++ b/rdr/hvn.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="0; url=https://hentaivn.tv/user-269104">
         <script type="text/javascript">
-            window.location.href = "https://hentaivn.tv/user-269104"
+            window.location.href = "https://hentaihvn.tv/user-269104"
         </script>
         <title>Sech</title>
     <link rel="icon" type="image/x-icon" href="../img/kuroo.png">
