--- a/rdr/35099.html
+++ b/rdr/35099.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="0; url=https://hentaivn.tv/35099-doc-truyen-id.html">
         <script type="text/javascript">
-            window.location.href = "https://hentaivn.tv/35099-doc-truyen-id.html"
+            window.location.href = "https://hentaihvn.tv/35099-doc-truyen-id.html"
         </script>
         <title>Sech</title>
     <link rel="icon" type="image/x-icon" href="../img/kuroo.png">
     </head>
     <body>
-        Copy <a href='https://hentaivn.tv/35099-doc-truyen-id.html'>link này</a> (https://hentaivn.tv/35099-doc-truyen-id.html) nếu bạn không được tự động chuyển hướng.
+        Copy <a href='https://hentaihvn.tv/35099-doc-truyen-id.html'>link này</a> (https://hentaivn.tv/35099-doc-truyen-id.html) nếu bạn không được tự động chuyển hướng.
     </body>
 </html>
