--- a/rdr/hvn.html
+++ b/rdr/hvn.html
@@ -10,6 +10,6 @@
     <link rel="icon" type="image/x-icon" href="../img/kuroo.png">
     </head>
     <body>
-        Copy <a href='https://hentaivn.tv/user-269104'>link này</a> (https://hentaivn.tv/user-269104) nếu bạn không được tự động chuyển hướng.
+        Copy <a href='https://hentaihvn.tv/user-269104'>link này</a> (https://hentaihvn.tv/user-269104) nếu bạn không được tự động chuyển hướng.
     </body>
 </html>
