--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
         <meta name="author" content="Kamaon">
         <meta name="description"
-              content="A very simple webpage, which is also a personal space for the one who is having a breakdown">
+              content="A very simple webpage">
 
         <!-- open graph protocol or something idk I read the mdn docs
             facebook and twitter(?) thingamajig -->
         <meta property="og:image" content="img/kuroo.img">
         <meta property="og:description"
-              content="A very simple webpage, which is also a personal space for the one who is having a breakdown">
+              content="A very simple webpage">
 
     </head>
 
