--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <body>
         <h1>Hallucination</h1>
-        <p>Currently, a playground for <strong>Kamaon</strong> to express himself to the outer world.</p>
+        <p>Currently, a playground for <strong>Kamaon</strong> to experiment things.</p>
         <p>Go <a href="https://github.com/drkamaon" title="GitHub profile">here</a>
             and check him out.</p>
         <br>
