--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>Hallucination</h1>
         <p>Currently, a playground for <strong>Kamaon</strong> to experiment things.</p>
         <p>Go <a href="https://github.com/drkamaon" title="GitHub profile">here</a>
-            and check him out.</p>
+            to pay him a visit.</p>
         <br>
 
         <p>Questionably enough, he translates doujins to Vietnamese.</p>
