--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <h1>Hallucination</h1>
         <p>Currently, a playground for <strong>Kamaon</strong> to experiment things.</p>
         <p>Go <a href="https://github.com/drkamaon" title="GitHub profile">here</a>
-            to pay him a visit.</p>
+            and pay him a visit.</p>
         <br>
 
         <p>Questionably enough, he translates doujins to Vietnamese.</p>
-        <p>There isn't much to say aside from that, so you can click <a href="rdr/hvn.html" title="It's pron.">here</a>
+        <p>There isn't much to say so you can click <a href="rdr/hvn.html" title="It's pron.">here</a>
             to see his work.</p>
         <img src="img/nahh.png" width="300" height="300" title="please ignore this image">
 
