--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         <br>
 
         <p>Questionably enough, he translates doujins to Vietnamese.</p>
-        <p>There isn't much to say so you can click <a href="rdr/hvn.html" title="It's pron.">here</a>
-            to see his work.</p>
+        <p><s>There isn't much to say so you can click <a href="rdr/hvn.html" title="It's pron.">here</a> to see his work.</s> <br>Webpage is down, (probably) under constrution</p>
         <img src="img/nahh.png" width="300" height="300" title="please ignore this image">
 
     </body>
