--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <br>
 
         <p>Questionably enough, he translates doujins to Vietnamese.</p>
-        <p><s>There isn't much to say so you can click <a href="rdr/hvn.html" title="It's pron.">here</a> to see his work.</s> <br>Webpage is down, (probably) under constrution</p>
+        <p>New: he is now part of Gallavoir Inc., and does mangas!</p>
+        <p><s>There isn't much to say so you can click <a href="rdr/hvn.html" title="It's pron.">here</a> to see his work.</s> <br>Webpage is down forever</p>
+        <p>Check out his team's Mangadex <a href="https://mangadex.org/group/01766f39-bdc7-4d87-b6d5-7366560a399c/">here.</a></p>
         <img src="img/nahh.png" width="300" height="300" title="please ignore this image">
 
     </body>
